--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ android {
 
 dependencies {
 
+    implementation("com.google.android.material:material:1.4.0-rc01")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
