--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,15 @@ dependencies {
 
     implementation("com.google.android.material:material:1.4.0-rc01")
 
+    //fragment
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
