--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,17 @@ dependencies {
 
     implementation("com.google.android.material:material:1.4.0-rc01")
 
+
     //fragment
     implementation "androidx.fragment:fragment-ktx:1.3.5"
 
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Google Sign in dependency
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
