--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,12 @@ dependencies {
     // Google Sign in dependency
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
+    // Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
