--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookSwap">
-        <activity android:name=".ImageViewActivity"></activity>
+        <activity android:name=".AddBookActivity"></activity>
+        <activity android:name=".ImageViewActivity" />
         <activity android:name=".CameraActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".TutorialActivity" />
