--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'com.google.gms.google-services'
     id 'kotlin-android-extensions'
+    id 'com.google.secrets_gradle_plugin' version '0.4'
 }
 
 android {
@@ -45,6 +46,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+
+    // Image Cropper
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    // ML Kit
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.3.0'
 
     // Image slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
