Added history and minor functionalities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookSwap">
-        <activity android:name=".SwapActivity"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".SwapActivity" />
         <activity android:name=".ProfileVisualisationActivity" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".BookVisualisationActivity" />
