--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,10 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
 // CameraX View class
     implementation "androidx.camera:camera-view:1.0.0-alpha26"
+//
+//    implementation("androidx.constraintlayout:constraintlayout:2.2.0-alpha10")
+//    // To use constraintlayout in compose
+//    implementation("androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha10")
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
