--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Google Maps
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+    //Youtube player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3'
 }
